# fr_events

./: CMakeLists.txt  README.md
examples/python/: send_receive.py
extras/ubuntu_test/: Dockerfile  README.md  build_events.sh  ubuntish.sh
include/fr_events/: base_event.hpp  event_buffer.hpp  filters.hpp  fr_events.hpp  simple_transport.hpp  transport.hpp  zmq_transport.hpp
python_api/: fr_events_python_api.cpp
src/: base_event.cpp  event_buffer.cpp  filters.cpp  simple_transport.cpp  transport.cpp  zmq_transport.cpp
test/: base_event.cpp  filters.cpp  simple_transport.cpp  test_runner_basic.cpp  zmq_test.cpp
